--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.2.2",
   "author": "wssgcg1213",
   "scripts": {
+    "lint": "eslint platforms app --fix",
+    "lint:fix": "npm run lint --fix",
     "start": "node bin/development.js",
     "production": "node bin/production.js",
     "build": "npm run clean && webpack --config webpack.build.js",
@@ -11,8 +13,8 @@
     "dev": "npm start"
   },
   "dependencies": {
-    "babel-cli": "^6.7.7",
-    "babel-core": "^6.9.1",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.20.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
@@ -20,9 +22,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.1",
     "co": "^4.6.0",
-    "debug": "^2.2.0",
+    "debug": "^2.4.4",
     "ejs": "^2.4.1",
-    "eslint": "^2.9.0",
     "isomorphic-fetch": "^2.2.1",
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
@@ -35,13 +36,13 @@
     "koa-static-plus": "^0.1.1",
     "koa-views": "^5.0.1",
     "koa-webpack-dev-middleware": "^1.2.1",
-    "lodash": "^4.11.1",
+    "lodash": "^4.17.2",
     "normalize.css": "^5.0.0",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.4.0",
-    "redux": "^3.5.2",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
@@ -58,11 +59,11 @@
     "colors": "^1.1.2",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.1",
-    "eslint-config-standard": "^5.2.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-react": "^5.1.1",
-    "eslint-plugin-standard": "^1.3.2",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.8.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
@@ -78,9 +79,9 @@
     "style-loader": "^0.13.1",
     "supertest": "^1.2.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.1"
+    "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.2"
   },
   "repository": {
     "type": "github",
