--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "version": "0.2.2",
   "author": "wssgcg1213",
   "scripts": {
-    "lint": "eslint platforms app --fix --ext .js,.jsx",
-    "start": "node bin/development.js",
-    "production": "node bin/production.js",
-    "build": "npm run clean && webpack --config webpack.build.js",
-    "clean": "rm -rf public/build/ && rm -rf dist/",
-    "test": "mocha -u bdd --compilers js:babel-core/register",
-    "dev": "npm start"
+    "lint": "eslint platforms app bin config --fix --ext .js,.jsx",
+    "start": "better-npm-run start",
+    "prod": "node bin/production.js",
+    "build": "npm run clean && better-npm-run build",
+    "clean": "rimraf public/build/ && rimraf dist/",
+    "test": "mocha -u bdd --compilers js:babel-core/register"
+  },
+  "betterScripts": {
+    "start": {
+      "command": "babel-node bin/development.js",
+      "env": {
+        "NODE_ENV": "development",
+        "DEBUG": "app:*"
+      }
+    },
+    "build": {
+      "command": "webpack --config webpack.build.js",
+      "env": {
+        "NODE_ENV": "production",
+        "DEBUG": "app:*"
+      }
+    }
   },
   "dependencies": {
     "babel-cli": "^6.18.0",
@@ -20,6 +35,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.1",
+    "classnames": "^2.2.5",
     "co": "^4.6.0",
     "debug": "^2.4.4",
     "ejs": "^2.4.1",
@@ -51,9 +67,11 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-define": "^1.0.0",
     "babel-plugin-inline-replace-variables": "^1.0.1",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-require-ignore": "^0.0.2",
     "babel-polyfill": "^6.9.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "better-npm-run": "^0.0.13",
     "chokidar": "^1.5.0",
     "colors": "^1.1.2",
     "copy-webpack-plugin": "^3.0.0",
@@ -73,6 +91,7 @@
     "mocha": "^3.1.2",
     "null-loader": "^0.1.1",
     "postcss-loader": "^0.9.1",
+    "rimraf": "^2.5.4",
     "rucksack-css": "^0.8.6",
     "should": "^11.1.1",
     "style-loader": "^0.13.1",
