--- a/package.json
+++ b/package.json
@@ -84,15 +84,16 @@
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "imports-loader": "^0.7.0",
     "json-loader": "^0.5.4",
     "koa-webpack-middleware": "^1.0.1",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
     "mocha": "^3.1.2",
+    "node-sass": "^4.0.0",
     "null-loader": "^0.1.1",
     "postcss-loader": "^0.9.1",
     "rimraf": "^2.5.4",
     "rucksack-css": "^0.8.6",
+    "sass-loader": "^4.1.0",
     "should": "^11.1.1",
     "style-loader": "^0.13.1",
     "supertest": "^1.2.0",
